--- a/static/template/tmpl_account_about.tmpl
+++ b/static/template/tmpl_account_about.tmpl
@@ -1,18 +1,19 @@
 <aside id="tmpl_account_about">
-	<li>
-		<strong>Username</strong>
+	<li class="anchor contrast">รายละเอียดผู้ใช้งาน</li>
+	<li data-icon="user-md">
+		<strong>ชื้อผู้ใช้</strong>
 		<small>{{username}}</small>
 	</li>
-	<li>
-		<strong>Name</strong>
+	<li data-icon="stethoscope">
+		<strong>ชื่อขนามสกุล</strong>
 		<small>{{fullname}}</small>
 	</li>
-	<li>
-		<strong>Hostname</strong>
+	<li data-icon="hdd">
+		<strong>เครื่องให้บริการข้อมูล</strong>
 		<small>{{hostname}}</small>
 	</li>
-	<li>
-		<strong>Timestamp</strong>
+	<li data-icon="time">
+		<strong>เวลาลงชื่อเข้าใช้</strong>
 		<small>{{timestamp}}</small>
 	</li>
 </aside>
