--- a/static/template/tmpl_util_progress.tmpl
+++ b/static/template/tmpl_util_progress.tmpl
@@ -1,9 +1,5 @@
 <aside id="tmpl_util_progress">
 	<div class="form">
-		<div class="progress" data-progress>
-			<span class="bar">
-				<span class="value"></span>
-			</span>
-		</div>
+		<div id="import_progress" data-progress></div>
 	</div>
 </aside>
