add icon chronic in chart page

--- a/static/template/tmpl_charts_detail.tmpl
+++ b/static/template/tmpl_charts_detail.tmpl
@@ -1,9 +1,10 @@
 <aside id="tmpl_charts_detail">
 	<li style="-webkit-box-shadow: inset 4px 0 {{color_column}};
-	-moz-box-shadow: inset 4px 0 {{color_column}};
-	-ms-box-shadow: inset 4px 0 {{color_column}};
-	-o-box-shadow: inset 4px 0 {{color_column}};
-	box-shadow: inset 4px 0 {{color_column}};">
+				-moz-box-shadow: inset 4px 0 {{color_column}};
+				-ms-box-shadow: inset 4px 0 {{color_column}};
+				-o-box-shadow: inset 4px 0 {{color_column}};
+				box-shadow: inset 4px 0 {{color_column}};">
+		<span class="icon user" style="color: {{color_column}};"></span>
 		<strong>{{column}}</strong>
 		<small class="form">{{value}}</small>
 	</li>
