make hypertension chart by colors

--- a/static/template/tmpl_charts_detail.tmpl
+++ b/static/template/tmpl_charts_detail.tmpl
@@ -4,7 +4,7 @@
 				-ms-box-shadow: inset 4px 0 {{color_column}};
 				-o-box-shadow: inset 4px 0 {{color_column}};
 				box-shadow: inset 4px 0 {{color_column}};">
-		<span class="icon user" style="color: {{color_column}};"></span>
+		<span class="icon user" style="color: {{color_column}}; {{css}}"></span>
 		<strong>{{column}}</strong>
 		<small class="form">{{value}}</small>
 	</li>
