--- a/static/template/tmpl_chronic_photos.tmpl
+++ b/static/template/tmpl_chronic_photos.tmpl
@@ -1,3 +1,6 @@
 <script id="tmpl_chronic_photos" type="text/x-gisiph-tmpl">
-	<img data-photo-id="{{photo_id}}" data-person-id="{{person_id}}" data-chroniccode="{{chroniccode}}" data-capture="{{capture}}" src="{{src}}">
+	<figure>
+		<img data-photo-id="{{photo_id}}" data-person-id="{{person_id}}" data-chroniccode="{{chroniccode}}" data-capture="{{capture}}" src="{{src}}">
+		<figcaption>{{uedit}} - {{timestamp}}</figcaption>
+	</figure>
 </script>
