--- a/static/template/tmpl_person_visited.tmpl
+++ b/static/template/tmpl_person_visited.tmpl
@@ -11,4 +11,8 @@
 		<label>กลุ่มอาการ</label>
 		<input type="text" value="{{color_case}}" readonly>
 	</fieldset>
+	<fieldset>
+		<label>อาการจาก</label>
+		<input type="text" value="{{color_from}}" readonly>
+	</fieldset>
 </script>
