--- a/static/template/tmpl_house_photos.tmpl
+++ b/static/template/tmpl_house_photos.tmpl
@@ -1,3 +1,6 @@
 <script id="tmpl_house_photos" type="text/x-gisiph-tmpl">
-	<img data-photo-id="{{photo_id}}" data-house-id="{{house_id}}" data-capture="{{capture}}" src="{{src}}">
+	<figure>
+		<img data-photo-id="{{photo_id}}" data-house-id="{{house_id}}" data-capture="{{capture}}" src="{{src}}">
+		<figcaption>{{uedit}} - {{timestamp}}</figcaption>
+	</figure>
 </script>
