add modify chart date and fix something
- add modify chart date
- remove some comment and console log

--- a/static/stylesheet/gisiph.css
+++ b/static/stylesheet/gisiph.css
@@ -122,3 +122,7 @@ section .list li.level_6 {
 	-o-box-shadow: inset 4px 0 #000000;
 	box-shadow: inset 4px 0 #000000;
 }
+
+optgroup {
+	background-color: #D2D7D3;
+}
