--- a/static/template/tmpl_chronic_photos.tmpl
+++ b/static/template/tmpl_chronic_photos.tmpl
@@ -1,6 +1,7 @@
 <script id="tmpl_chronic_photos" type="text/x-gisiph-tmpl">
 	<figure>
 		<img data-photo-id="{{photo_id}}" data-person-id="{{person_id}}" data-chroniccode="{{chroniccode}}" data-capture="{{capture}}" src="{{src}}">
-		<figcaption>{{uedit}} - {{timestamp}}</figcaption>
+		<figcaption>{{uedit}}<br>
+			{{timestamp}}</figcaption>
 	</figure>
 </script>
