fixed chart unit and bad word in account page

--- a/static/template/tmpl_account_about.tmpl
+++ b/static/template/tmpl_account_about.tmpl
@@ -5,7 +5,7 @@
 		<small>{{username}}</small>
 	</li>
 	<li data-icon="stethoscope">
-		<strong>ชื่อขนามสกุล</strong>
+		<strong>ชื่อ-นามสกุล</strong>
 		<small>{{fullname}}</small>
 	</li>
 	<li data-icon="hdd">
