--- a/static/template/tmpl_house_detail.tmpl
+++ b/static/template/tmpl_house_detail.tmpl
@@ -2,6 +2,7 @@
 	<fieldset>
 		<textarea readonly>{{address}}</textarea>
 	</fieldset>
+	<div class="color {{house_color}}">&nbsp;</div>
 	<div id="house_location">
 		<img data-house-id="{{house_id}}" src="http://maps.googleapis.com/maps/api/staticmap?center={{latitude}},{{longitude}}&zoom=14&size={{width}}x{{height}}&scale=1&markers={{latitude}},{{longitude}}&sensor=false">
 	</div>
