--- a/static/template/tmpl_person_visited.tmpl
+++ b/static/template/tmpl_person_visited.tmpl
@@ -15,4 +15,5 @@
 		<label>อาการจาก</label>
 		<input type="text" value="{{color_from}}" readonly>
 	</fieldset>
+	<div class="color {{person_color}}">&nbsp;</div>
 </script>
