add layout phone number

--- a/static/template/tmpl_person_detail.tmpl
+++ b/static/template/tmpl_person_detail.tmpl
@@ -31,4 +31,8 @@
 		<label>สัญชาติ</label>
 		<input type="text" value="{{nation}}" readonly>
 	</fieldset>
+	<fieldset>
+		<label>โทรศัพท์</label>
+		<input type="text" value="" readonly>
+	</fieldset>
 </script>
