add circle color in manage page

--- a/static/template/tmpl_manage_houses.tmpl
+++ b/static/template/tmpl_manage_houses.tmpl
@@ -1,5 +1,6 @@
 <aside id="tmpl_manage_houses">
 	<li class="arrow {{color_class}}" data-house-id="{{house_id}}">
+		<span class="icon manage {{color_class}}"></span>
 		<strong>{{address}}</strong>
 		<small>พิกัด {{latitude}}, {{longitude}}</small>
 	</li>
