--- a/static/template/tmpl_manage_persons.tmpl
+++ b/static/template/tmpl_manage_persons.tmpl
@@ -1,5 +1,6 @@
 <aside id="tmpl_manage_persons">
 	<li class="arrow {{color_class}}" data-person-id="{{person_id}}">
+		<span class="icon manage {{color_class}}"></span>
 		<strong>{{fullname}}</strong>
 		<small>อายุ {{age}}ปี, อาชีพ {{occupa}}</small>
 	</li>
