--- a/static/stylesheet/gisiph.css
+++ b/static/stylesheet/gisiph.css
@@ -68,60 +68,60 @@ textarea {
 }
 
 section .list li.unseen {
-	-webkit-box-shadow: inset 8px 0 #cccccc;
-	-moz-box-shadow: inset 8px 0 #cccccc;
-	-ms-box-shadow: inset 8px 0 #cccccc;
-	-o-box-shadow: inset 8px 0 #cccccc;
-	box-shadow: inset 8px 0 #cccccc;
+	-webkit-box-shadow: inset 4px 0 #cccccc;
+	-moz-box-shadow: inset 4px 0 #cccccc;
+	-ms-box-shadow: inset 4px 0 #cccccc;
+	-o-box-shadow: inset 4px 0 #cccccc;
+	box-shadow: inset 4px 0 #cccccc;
 }
 section .list li.level_0 {
-	-webkit-box-shadow: inset 8px 0 #ffffff;
-	-moz-box-shadow: inset 8px 0 #ffffff;
-	-ms-box-shadow: inset 8px 0 #ffffff;
-	-o-box-shadow: inset 8px 0 #ffffff;
-	box-shadow: inset 8px 0 #ffffff;
+	-webkit-box-shadow: inset 4px 0 #ffffff;
+	-moz-box-shadow: inset 4px 0 #ffffff;
+	-ms-box-shadow: inset 4px 0 #ffffff;
+	-o-box-shadow: inset 4px 0 #ffffff;
+	box-shadow: inset 4px 0 #ffffff;
 }
 section .list li.level_1 {
-	-webkit-box-shadow: inset 8px 0 #00ff00;
-	-moz-box-shadow: inset 8px 0 #00ff00;
-	-ms-box-shadow: inset 8px 0 #00ff00;
-	-o-box-shadow: inset 8px 0 #00ff00;
-	box-shadow: inset 8px 0 #00ff00;
+	-webkit-box-shadow: inset 4px 0 #00ff00;
+	-moz-box-shadow: inset 4px 0 #00ff00;
+	-ms-box-shadow: inset 4px 0 #00ff00;
+	-o-box-shadow: inset 4px 0 #00ff00;
+	box-shadow: inset 4px 0 #00ff00;
 }
 section .list li.level_2 {
-	-webkit-box-shadow: inset 8px 0 #007700;
-	-moz-box-shadow: inset 8px 0 #007700;
-	-ms-box-shadow: inset 8px 0 #007700;
-	-o-box-shadow: inset 8px 0 #007700;
-	box-shadow: inset 8px 0 #007700;
+	-webkit-box-shadow: inset 4px 0 #007700;
+	-moz-box-shadow: inset 4px 0 #007700;
+	-ms-box-shadow: inset 4px 0 #007700;
+	-o-box-shadow: inset 4px 0 #007700;
+	box-shadow: inset 4px 0 #007700;
 }
 section .list li.level_3 {
-	-webkit-box-shadow: inset 8px 0 #ffff00;
-	-moz-box-shadow: inset 8px 0 #ffff00;
-	-ms-box-shadow: inset 8px 0 #ffff00;
-	-o-box-shadow: inset 8px 0 #ffff00;
-	box-shadow: inset 8px 0 #ffff00;
+	-webkit-box-shadow: inset 4px 0 #ffff00;
+	-moz-box-shadow: inset 4px 0 #ffff00;
+	-ms-box-shadow: inset 4px 0 #ffff00;
+	-o-box-shadow: inset 4px 0 #ffff00;
+	box-shadow: inset 4px 0 #ffff00;
 }
 section .list li.level_4 {
-	-webkit-box-shadow: inset 8px 0 #ff7f00;
-	-moz-box-shadow: inset 8px 0 #ff7f00;
-	-ms-box-shadow: inset 8px 0 #ff7f00;
-	-o-box-shadow: inset 8px 0 #ff7f00;
-	box-shadow: inset 8px 0 #ff7f00;
+	-webkit-box-shadow: inset 4px 0 #ff7f00;
+	-moz-box-shadow: inset 4px 0 #ff7f00;
+	-ms-box-shadow: inset 4px 0 #ff7f00;
+	-o-box-shadow: inset 4px 0 #ff7f00;
+	box-shadow: inset 4px 0 #ff7f00;
 }
 section .list li.level_5 {
-	-webkit-box-shadow: inset 8px 0 #ff0000;
-	-moz-box-shadow: inset 8px 0 #ff0000;
-	-ms-box-shadow: inset 8px 0 #ff0000;
-	-o-box-shadow: inset 8px 0 #ff0000;
-	box-shadow: inset 8px 0 #ff0000;
+	-webkit-box-shadow: inset 4px 0 #ff0000;
+	-moz-box-shadow: inset 4px 0 #ff0000;
+	-ms-box-shadow: inset 4px 0 #ff0000;
+	-o-box-shadow: inset 4px 0 #ff0000;
+	box-shadow: inset 4px 0 #ff0000;
 }
 section .list li.level_6 {
-	-webkit-box-shadow: inset 8px 0 #000000;
-	-moz-box-shadow: inset 8px 0 #000000;
-	-ms-box-shadow: inset 8px 0 #000000;
-	-o-box-shadow: inset 8px 0 #000000;
-	box-shadow: inset 8px 0 #000000;
+	-webkit-box-shadow: inset 4px 0 #000000;
+	-moz-box-shadow: inset 4px 0 #000000;
+	-ms-box-shadow: inset 4px 0 #000000;
+	-o-box-shadow: inset 4px 0 #000000;
+	box-shadow: inset 4px 0 #000000;
 }
 
 optgroup {
@@ -136,3 +136,17 @@ div.color.level_3 { background: #ffff00; }
 div.color.level_4 { background: #ff7f00; }
 div.color.level_5 { background: #ff0000; }
 div.color.level_6 { background: #000000; }
+
+.manage {
+	margin-top: 7px;
+	border: 1px solid #777777;
+	border-radius: 50%;
+}
+span.manage.unseen  { background-color: #cccccc; }
+span.manage.level_0 { background-color: #ffffff; }
+span.manage.level_1 { background-color: #00ff00; }
+span.manage.level_2 { background-color: #007700; }
+span.manage.level_3 { background-color: #ffff00; }
+span.manage.level_4 { background-color: #ff7f00; }
+span.manage.level_5 { background-color: #ff0000; }
+span.manage.level_6 { background-color: #000000; }
