fix phone number

--- a/static/template/tmpl_person_detail.tmpl
+++ b/static/template/tmpl_person_detail.tmpl
@@ -33,6 +33,6 @@
 	</fieldset>
 	<fieldset>
 		<label>โทรศัพท์</label>
-		<input type="text" value="" readonly>
+		<input type="text" value="{{phone}}" readonly>
 	</fieldset>
 </script>
